Sync (#18)
* Refactor errors (#13)

* [MOD] default error response for every endpoint

* Dump error-components

* [ADD] Basic tests structure

* fix npm

* [ADD] Tags (#14)

* [MOD] DB scripts

* [MOD] Old files

* [MOD] Names changed

* [ADD] Tags

* [DEL] Removed unused var

* [ADD] Script for updating dbs, TEMPORARY

* [MOD] Scripts

* [MOD] Parallelism

* [MOD] Reverted parallelism during creation

* [ADD] Temp logs to find bug

* [ADD] Tag as required in PostProjectData

* Revert "[ADD] Temp logs to find bug"

This reverts commit 3e379ae4d1b46c26101a15556fcbdbdb75fc342f.

* Updated dbs

* [ADD] Reviewers

* Removed console.log

* [ADD] Endpoints to GET and SET status in review requests

* [ADD] Status field to projectPreview

* Dump error_components

* [FIX] Reviewer update

* Dump

* [ADD] Publish

* [ADD] Status and type filters

* [ADD] create and get wallets

* [ADD] coverPicUrl

* [FIX] init db script

* [FIX] init sb script
