# assets/api.yml
@@ -22,6 +22,8 @@ servers:
 
 tags:
   - name: Projects
+  - name: Reviews
+  - name: Wallets
 
 # =============================================================================
 
@@ -38,6 +40,19 @@ paths:
           schema:
             type: string
           description: The userId of whom we want to retrieve projects.
+        - in: query
+          name: type
+          required: false
+          schema:
+            type: string
+            example: 'social'
+          description: Type of project to retrieve.
+        - in: query
+          name: status
+          required: false
+          schema:
+            $ref: '#/components/schemas/ProjectStatus'
+          description: Status of project to retrieve.
         - in: query
           name: limit
           required: false
@@ -82,7 +97,7 @@ paths:
   /projects/{projectId}:
     get:
       summary: Get a project by id.
-      description: Allos a user to get retrieve a project's information by its id.
+      description: Allows a user to retrieve a project's information by its id.
       tags:
         - Projects
       parameters:
@@ -155,6 +170,103 @@ paths:
         default:
           $ref: '#/components/responses/Error'
 
+  # REVIEWERS
+  /reviewrequests/{reviewerId}:
+    get:
+      summary: Get review requests for a given reviewer
+      description: Allows a reviewer to retrieve its review requests.
+      tags:
+        - Reviewers
+      parameters:
+        - in: header
+          name: uid
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the user that requests
+        - in: path
+          name: reviewerId
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the reviewer
+      responses:
+        200:
+          $ref: '#/components/responses/getReviewRequests'
+        default:
+          $ref: '#/components/responses/Error'
+  
+  /reviewrequests/{reviewerId}/{projectId}:
+    put:
+      summary: Change status of review request
+      description: Allows a reviewer to change the status of its review requests.
+      tags:
+        - Reviewers
+      parameters:
+        - in: header
+          name: uid
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the user that requests
+        - in: path
+          name: projectId
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the project
+        - in: path
+          name: reviewerId
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: uuid of the reviewer
+      requestBody:
+        $ref: '#/components/requestBodies/putReviewRequest'
+      responses:
+        204:
+          description: 'Review request updated successfully.'
+        default:
+          $ref: '#/components/responses/Error'
+
+  # WALLETS
+  /wallets:
+    post:
+      summary: Create a new wallet
+      description: Allows a user to create a new wallet.
+      tags:
+        - Wallets
+      parameters:
+        - in: header
+          name: uid
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+      responses:
+        201:
+          $ref: '#/components/responses/postWallet'
+        default:
+          $ref: '#/components/responses/Error'
+
+  /wallets/{userId}:
+    get:
+      summary: Get a wallet by its user id.
+      description: Allows a user to retrieve a wallet's information by its id.
+      tags:
+        - Wallets
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            $ref: '#/components/schemas/Id'
+          required: true
+          description: id of the user whom wallet we want to retrieve
+      responses:
+        200:
+          $ref: '#/components/responses/getWallet'
+        default:
+          $ref: '#/components/responses/Error'
+  
   # STATUS
   /health:
     get:
@@ -194,7 +306,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/PatchProjectData'
-  
+    
+    putReviewRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/PutReviewRequest'
+ 
   # ---------------------------------------------------------------------------
   responses:
     Error:
@@ -242,6 +361,29 @@ components:
           schema:
             $ref: '#/components/schemas/ProjectId'
 
+    # REVIEWERS
+    getReviewRequests:
+      description: Review requests retrieved successfully.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ReviewRequests'
+
+    # WALLETS
+    getWallet:
+      description: Wallet retrieved successfully.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Wallet'
+
+    postWallet:
+      description: Wallet created successfully.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Address'
+    
     # STATUS
     health:
       description: Microservice general health state reported.
@@ -277,15 +419,27 @@ components:
         - status
         - name
     
+    Address:
+      type: string
+      example: '0xf018Be4Fe4fBD4cA1B1162A44bB139a343C2087b'
+
     Date:
       type: string
       format: date-time
       example: '2021-06-13T21:29:29.330Z'
 
+    ETHAmount:
+      type: number
+      example: 0.000001
+
     Id:
       type: string
       format: uuid
       example: '123e4567-e89b-12d3-a456-426614174000'
+
+    Picture:
+      type: string
+      example: 'https://imgur.com/gallery/rFvivtw'
 
     # PROJECTS
     AllProjects:
@@ -302,6 +456,244 @@ components:
       type: object
       properties:
         id:
+          $ref: '#/components/schemas/Id'
+        status:
+          $ref: '#/components/schemas/ProjectStatus'
+        userId:
+          $ref: '#/components/schemas/Id'
+        reviewerId:
+          $ref: '#/components/schemas/Id'
+        title:
+          type: string
+          example: 'Prohibir la utilizacion de Winbugs globalmente'
+        description:
+          type: string
+          example: 'No puede ser que haya gente que use Winbugs'
+        coverPicUrl:
+          $ref: '#/components/schemas/Picture'
+        type:
+          type: string
+          example: 'social'
+        objective:
+          type: string
+          example: 'Salvar a la gente de esta maldicion'
+        country:
+          type: string
+          example: 'Argentina'
+        city:
+          type: string
+          example: 'Buenos Aires'
+        publishedOn:
+          $ref: '#/components/schemas/Date'
+        finalizedBy:
+          $ref: '#/components/schemas/Date'
+        tags:
+          $ref: '#/components/schemas/Tags'
+        reviewers:
+          $ref: '#/components/schemas/Reviewers'
+      required:
+        - id
+        - status
+        - userId
+        - title
+        - description
+        - type
+        - objective
+        - country
+        - city
+        - publishedOn
+        - finalizedBy
+        - tags
+
+    ProjectPreview:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/Id'
+        status:
+          $ref: '#/components/schemas/ProjectStatus'
+        title:
+          type: string
+          example: 'Prohibir la utilizacion de Winbugs globalmente'
+        description:
+          type: string
+          example: 'No puede ser que haya gente que use Winbugs'
+        coverPicUrl:
+          $ref: '#/components/schemas/Picture'
+        type:
+          type: string
+          example: 'social'
+        country:
+          type: string
+          example: 'Argentina'
+        city:
+          type: string
+          example: 'Buenos Aires'
+        finalizedBy:
+          $ref: '#/components/schemas/Date'
+        tags:
+          $ref: '#/components/schemas/Tags'
+      required:
+        - id
+        - status
+        - title
+        - description
+        - type
+        - objective
+        - country
+        - city
+        - finalizedBy
+        - tags
+
+    PostProjectData:
+      type: object
+      properties:
+        title:
+          type: string
+          example: 'Prohibir la utilizacion de Winbugs globalmente'
+        description:
+          type: string
+          example: 'No puede ser que haya gente que use Winbugs'
+        coverPicUrl:
+          $ref: '#/components/schemas/Picture'
+        type:
+          type: string
+          example: 'social'
+        objective:
+          type: string
+          example: 'Salvar a la gente de esta maldicion'
+        country:
+          type: string
+          example: 'Argentina'
+        city:
+          type: string
+          example: 'Buenos Aires'
+        finalizedBy:
+          $ref: '#/components/schemas/Date'
+        tags:
+          $ref: '#/components/schemas/Tags'
+        reviewers:
+          $ref: '#/components/schemas/ReviewersRaw'
+      required:
+        - title
+        - description
+        - type
+        - objective
+        - country
+        - city
+        - finalizedBy
+        - tags
+        - reviewers
+
+    PatchProjectData:
+      type: object
+      properties:
+        title:
+          type: string
+          example: 'Prohibir la utilizacion de Winbugs globalmente'
+        status:
+          $ref: '#/components/schemas/FundingProjectStatus'
+        description:
+          type: string
+          example: 'No puede ser que haya gente que use Winbugs'
+        coverPicUrl:
+          $ref: '#/components/schemas/Picture'
+        type:
+          type: string
+          example: 'social'
+        objective:
+          type: string
+          example: 'Salvar a la gente de esta maldicion'
+        country:
+          type: string
+          example: 'Argentina'
+        city:
+          type: string
+          example: 'Buenos Aires'
+        finalizedBy:
+          $ref: '#/components/schemas/Date'
+        tags:
+          $ref: '#/components/schemas/Tags'
+        reviewers:
+          $ref: '#/components/schemas/ReviewersRaw'          
+      minProperties: 1
+
+    ProjectId:
+      type: object
+      properties:
+        id:
+          type: string
+          example: '670b9562-b30d-52d5-b827-655787665500'
+      required:
+        - id
+      
+    ProjectStatus:
+      type: string
+      enum:
+        - DRAFT
+        - FUNDING
+        - FINALIZED
+
+    FundingProjectStatus:
+      type: string
+      enum:
+        - FUNDING
+    
+    Tags:
+      type: array
+      items:
+        type: string
+      example: ['javascript', 'python', 'food']
+    
+    # REVIEWERS
+    Reviewer:
+      type: object
+      properties:
+        reviewerId:
+          $ref: '#/components/schemas/Id'
+        status:
+          $ref: '#/components/schemas/ReviewerStatus'  
+      required:
+        - reviewerId
+        - status
+
+    Reviewers:
+      type: array
+      items:
+        $ref: '#/components/schemas/Reviewer'
+
+    ReviewersRaw:
+      type: array
+      items:
+        $ref: '#/components/schemas/Id'
+
+    ReviewerStatus:
+      type: string
+      enum:
+        - PENDING
+        - ACCEPTED
+        - REJECTED
+    
+    PutReviewerStatus:
+      type: string
+      enum:
+        - ACCEPTED
+        - REJECTED
+
+    ReviewRequests:
+      type: object
+      properties:
+        requests:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReviewRequest'
+      required:
+        - requests
+
+    ReviewRequest:
+      type: object
+      properties:
+        projectId:
           $ref: '#/components/schemas/Id'
         userId:
           $ref: '#/components/schemas/Id'
@@ -327,10 +719,10 @@ components:
           $ref: '#/components/schemas/Date'
         finalizedBy:
           $ref: '#/components/schemas/Date'
-        tags:
-          $ref: '#/components/schemas/Tags'
+        status:
+          $ref: '#/components/schemas/ReviewerStatus'  
       required:
-        - id
+        - projectId
         - userId
         - title
         - description
@@ -340,119 +732,27 @@ components:
         - city
         - publishedOn
         - finalizedBy
-        - tags
+        - status
 
-    ProjectPreview:
+    PutReviewRequest:
       type: object
       properties:
-        id:
-          $ref: '#/components/schemas/Id'
-        title:
-          type: string
-          example: 'Prohibir la utilizacion de Winbugs globalmente'
-        description:
-          type: string
-          example: 'No puede ser que haya gente que use Winbugs'
-        type:
-          type: string
-          example: 'social'
-        country:
-          type: string
-          example: 'Argentina'
-        city:
-          type: string
-          example: 'Buenos Aires'
-        finalizedBy:
-          $ref: '#/components/schemas/Date'
-        tags:
-          $ref: '#/components/schemas/Tags'
+        status:
+          $ref: '#/components/schemas/PutReviewerStatus'  
       required:
-        - id
-        - title
-        - description
-        - type
-        - objective
-        - country
-        - city
-        - finalizedBy
-        - tags
+        - status
 
-    PostProjectData:
+    # WALLETS
+    Wallet:
       type: object
       properties:
-        title:
-          type: string
-          example: 'Prohibir la utilizacion de Winbugs globalmente'
-        description:
-          type: string
-          example: 'No puede ser que haya gente que use Winbugs'
-        type:
-          type: string
-          example: 'social'
-        objective:
-          type: string
-          example: 'Salvar a la gente de esta maldicion'
-        country:
-          type: string
-          example: 'Argentina'
-        city:
-          type: string
-          example: 'Buenos Aires'
-        finalizedBy:
-          $ref: '#/components/schemas/Date'
-        tags:
-          $ref: '#/components/schemas/Tags'
+        address:
+          $ref: '#/components/schemas/Address'
+        balance:
+          $ref: '#/components/schemas/ETHAmount'
       required:
-        - title
-        - description
-        - type
-        - objective
-        - country
-        - city
-        - finalizedBy
-        - tags
-
-    PatchProjectData:
-      type: object
-      properties:
-        title:
-          type: string
-          example: 'Prohibir la utilizacion de Winbugs globalmente'
-        description:
-          type: string
-          example: 'No puede ser que haya gente que use Winbugs'
-        type:
-          type: string
-          example: 'social'
-        objective:
-          type: string
-          example: 'Salvar a la gente de esta maldicion'
-        country:
-          type: string
-          example: 'Argentina'
-        city:
-          type: string
-          example: 'Buenos Aires'
-        finalizedBy:
-          $ref: '#/components/schemas/Date'
-        tags:
-          $ref: '#/components/schemas/Tags'
-      minProperties: 1
-
-    ProjectId:
-      type: object
-      properties:
-        id:
-          type: string
-          example: '670b9562-b30d-52d5-b827-655787665500'
-      required:
-        - id
-
-    Tags:
-      type: array
-      items:
-        type: string
-      example: ['javascript', 'python', 'food']
+        - address
+        - balance
     
     # STATUS
     Ping:
