# src/routers/apiRouter.js
@@ -3,7 +3,9 @@ const express = require('express');
 module.exports = function apiRouter(
   apiValidatorMiddleware,
   projectController,
-  statusController
+  reviewerController,
+  statusController,
+  walletController
 ) {
   return (
     express
@@ -26,5 +28,16 @@ module.exports = function apiRouter(
       .get('/projects/:projectId', projectController.get)
       .patch('/projects/:projectId', projectController.update)
       .delete('/projects/:projectId', projectController.remove)
+
+      // Reviewers
+      .get('/reviewrequests/:reviewerId', reviewerController.getRequests)
+      .put(
+        '/reviewrequests/:reviewerId/:projectId',
+        reviewerController.updateRequest
+      )
+
+      // Wallets
+      .post('/wallets', walletController.create)
+      .get('/wallets/:userId', walletController.get)
   );
 };
